--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ h1 {
     border-radius: 0.5rem;
     border: none;
     background: var(--cor-destaque);
-    color: #000;
+    color: #ffffff;
     font-size: 2.5rem;
     font-weight: 500;
     line-height: normal;
