--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --cor-destaque: #b7386200;
+    --cor-destaque: #000000;
     --cor-gradiente-rosa: linear-gradient(135deg, #fce4ec, #f8bbd0, #f48fb1, #fce4ec);
 }
 
